--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="node_modules/intro.js/introjs.css">
     <link rel="stylesheet" href="https://unpkg.com/98.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,5 +12,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script src="node_modules/intro.js/intro.js"></script>
   </body>
 </html>
